@@ -1,3 +1,8 @@
+2014-08-01  Ben Finney  <ben+python@benfinney.id.au>
+
+    * Ensure a ‘basestring’ name bound to the base type for strings.
+      This is to allow checks to work on Python 2 and 3.
+
 2014-05-20  Ben Finney  <ben+python@benfinney.id.au>
 
     * Update copyright notices.
